include_directories(
  ${GSTREAMER_INCLUDE_DIRS}
  ${GSTREAMER_VIDEO_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${OPENCV_INCLUDE_DIRS}
  ${SOUP_INCLUDE_DIRS}
)

set(FACEDETECTOR_SOURCES
  facedetector.c
  kmsfacedetector.c kmsfacedetector.h
  classifier.h classifier.cpp
)

add_library(facedetector MODULE ${FACEDETECTOR_SOURCES})

target_link_libraries(facedetector
  ${GSTREAMER_LIBRARIES}
  ${GSTREAMER_VIDEO_LIBRARIES}
  ${OPENCV_LIBRARIES}
  ${SOUP_LIBRARIES}
)

install(
  TARGETS facedetector
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_MODULESDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
